--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Black Jack - v0.1-alpha</title>
 	<script type="text/javascript" src="js/game.js"></script>
+  <meta charset="utf-8">
 </head>
 <body>
 
