Change title. Added version suffix.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Black Jack</title>
+	<title>Black Jack - v0.1-alpha</title>
 	<script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
