--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
 	<title>Black Jack - v0.1-alpha</title>
 	<script type="text/javascript" src="js/game.js"></script>
+  <script type="text/javascript" src="js/process.js"></script>
   <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+  <div id="wrapper">
+    <div id="table">
+      <div id="dealer">
+        <div class="card-wrapper">
+        </div>
+      </div>
+      <div id="player">
+        <div class="card-wrapper">
+        </div>
+      </div>
+    </div>
+    <div id="actions">
+      <script type="text/javascript">
 
+      </script>
+    </div>
+  </div>
 </body>
 </html>
