--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <div id="wrapper">
     <div id="table">
       <div id="dealer">
-        <div class="card-wrapper">
-        </div>
+        <div class="card-wrapper"></div>
+        <div class="dealerpoints-wrapper"></div>
       </div>
       <div id="player">
-        <div class="card-wrapper">
-        </div>
+        <div class="card-wrapper"></div>
+        <div class="playerpoints-wrapper"></div>
       </div>
     </div>
     <div id="actions">
