The game first release

--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
     <div id="table">
       <div id="dealer">
         <div class="card-wrapper"></div>
-        <div class="dealerpoints-wrapper"></div>
+        <div class="points-wrapper"></div>
       </div>
       <div id="player">
         <div class="card-wrapper"></div>
-        <div class="playerpoints-wrapper"></div>
+        <div class="points-wrapper"></div>
       </div>
     </div>
-    <div id="actions">
-      <script type="text/javascript">
-
-      </script>
-    </div>
+    <div id="actions"></div>
   </div>
 </body>
 </html>
