--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Black Jack - v0.1-alpha</title>
+	<title>Black Jack - v1.0</title>
 	<script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/process.js"></script>
   <meta charset="utf-8">
