--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+  <div id="welcome">Black Jack</div>
   <div id="wrapper">
     <div id="table">
       <div id="dealer">
