Win Percent add #14

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <div id="wrapper">
+    <div id="percent_table">Record
+    </div>
     <div id="table">
       <div id="dealer">
         <div class="result result_dealer"></div>
