Black Jack count check (35 min) #15

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="card-wrapper"></div>
         <div class="points-wrapper"></div>
       </div>
+      <div id="blackjack_wrapper">
+        <div id="blackjack_count">0</div>
+        <h6>Black Jack's</h6>
+      </div>
       <div id="player">
         <div class="result result_player"></div>
         <div class="card-wrapper"></div>
