--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Black Jack - v1.0</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Knewave&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="js/game.js"></script>
   <script type="text/javascript" src="js/process.js"></script>
   <meta charset="utf-8">
