Percent wrapper edit (15 min) #14

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <div id="percent_table">Record</div>
   <div id="wrapper">
-    <div id="percent_table">Record
-    </div>
     <div id="table">
       <div id="dealer">
         <div class="result result_dealer"></div>
