New bug, none fixed (HELP) #15

--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+  <div id="blackjacks">Black Jack: 0%</div>
   <div id="wrapper">
     <div id="table">
       <div id="dealer">
         <div class="result result_dealer"></div>
         <div class="card-wrapper"></div>
         <div class="points-wrapper"></div>
-      </div>
-      <div id="blackjack_wrapper">
-        <div id="blackjack_count">0</div>
-        <h6>Black Jack's</h6>
       </div>
       <div id="player">
         <div class="result result_player"></div>
